--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ header .date {
 .main-article article span::first-letter {
     font-weight: bold;
     font-size: 2em;
+    line-height: 1;
 }
 
 .main-article article {
